--- a/VW_DMPP/Shared/NavMenu.razor
+++ b/VW_DMPP/Shared/NavMenu.razor
@@ -17,14 +17,11 @@
                 <span class="oi oi-home" aria-hidden="true"></span> 檢驗項目清單
             </NavLink>
         </div>
+
+      
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="modeeels">
-                <span class="oi oi-plus" aria-hidden="true"></span> 檢驗表單
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="testdoc">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> 檢驗標準模組
+            <NavLink class="nav-link" href="yysc">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> 機台紀錄列表
             </NavLink>
         </div>
     </nav>
