--- a/VW_DMPP/Pages/Testdoc.razor
+++ b/VW_DMPP/Pages/Testdoc.razor
@@ -1,7 +1,7 @@
 ﻿@page "/testdoc"
 @inject IJSRuntime JSRuntime
 
-<PageTitle>品檢項目基本資料</PageTitle>
+<PageTitle>品檢資料登錄表</PageTitle>
 
 <style>
   body {
@@ -298,7 +298,7 @@
 <div class="save-indicator" id="saveIndicator">✓ 已自動保存</div>
 
 <div class="container">
-  <h1>品檢項目基本資料</h1>
+    <h1>品檢資料登錄表</h1>
 
   <div class="main-layout">
       <div class="left-panel">
@@ -379,7 +379,7 @@
 
 <script>
   const processPersonnelList = ['劉昭鴻', '陳蔚霖', '黃柏堯', '謝嘉育', '鄭佳貴', '劉冠佑', '王宜碩', '王旻琪', '李泓儀', '張政弘', '施瑞穎', '待指派'];
-  const finalPersonnelList = ['賴玉政', '黃柏堯', '待指派'];
+  const finalPersonnelList = ['劉昭鴻', '黃柏堯', '待指派'];
   const STORAGE_KEY = 'inspectionData_SF0669';
 
   // 初始數據模板
